# dr_transcribe

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
dr_transcribe/: __init__.py  __main__.py  celery.py  conftest.py  gunicorn_runner.py  logging.py  settings.py
dr_transcribe/services/: __init__.py
dr_transcribe/tasks/: transcript.py
dr_transcribe/tasks/util/: aws.py  embedding_examiner.py  examiner.py  llm_examiner.py  openai_examiner.py
dr_transcribe/tests/: __init__.py
dr_transcribe/web/: __init__.py  application.py
dr_transcribe/web/api/: __init__.py  router.py
dr_transcribe/web/api/monitoring/: __init__.py
dr_transcribe/web/api/transcript/: __init__.py  schema.py  views.py
